fix: navbar collapse menu is transparent in safari

--- a/assets/scss/wowchemy/components/_nav.scss
+++ b/assets/scss/wowchemy/components/_nav.scss
@@ -66,7 +66,7 @@
     height: 50px;
 
     .main-menu-item.collapse {
-      height: fit-content;
+      height: auto;
     }
 
     .navbar-nav-scroll {
